--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -12,7 +12,7 @@
 				
 				<!-- Firstname -->
 				<div class="col-md-5 col-md-offset-1">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.firstname.$valid, 'has-error': !signUpForm.firstname.$valid && signUpForm.firstname.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.firstname.$valid, 'has-error': signUpForm.firstname.$invalid && signUpForm.firstname.$dirty}">
 						<div class="input-group">
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-hand-right"></span>
@@ -21,7 +21,7 @@
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.firstname.$valid" aria-hidden="true"></span>
 						<span id="firstnameStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.firstname.$valid && signUpForm.firstname.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.firstname.$invalid && signUpForm.firstname.$dirty" aria-hidden="true"></span>
 						<span id="firstnameStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.firstname.$error.minlength">* The firstname has to be a least 2 characters</span>
 						<span class="validationError" ng-show="signUpForm.firstname.$error.maxlength">* The firstname can't be more than 60 characters</span>
@@ -31,7 +31,7 @@
 
 				<!-- Lastname -->
 				<div class="col-md-5">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.lastname.$valid, 'has-error': !signUpForm.lastname.$valid && signUpForm.lastname.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.lastname.$valid, 'has-error': signUpForm.lastname.$invalid && signUpForm.lastname.$dirty}">
 						<label class="control-label sr-only" for="Lastname"> Lastname </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
@@ -39,7 +39,7 @@
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.lastname.$valid" aria-hidden="true"></span>
 						<span id="lastnameStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.lastname.$valid && signUpForm.lastname.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.lastname.$invalid && signUpForm.lastname.$dirty" aria-hidden="true"></span>
 						<span id="lastnameStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.lastname.$error.minlength">* The lastname has to be a least 2 characters</span>
 						<span class="validationError" ng-show="signUpForm.lastname.$error.maxlength">* The lastname can't be more than 60 characters</span>
@@ -71,7 +71,7 @@
 
 				<!-- Username -->
 				<div class="col-md-5">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.username.$valid, 'has-error': !signUpForm.username.$valid && signUpForm.username.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.username.$valid, 'has-error': signUpForm.username.$invalid && signUpForm.username.$dirty}">
 						<label class="control-label sr-only" for="username"> Username </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
@@ -79,7 +79,7 @@
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.username.$valid" aria-hidden="true"></span>
 						<span id="usernameStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.username.$valid && signUpForm.username.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.username.$invalid && signUpForm.username.$dirty" aria-hidden="true"></span>
 						<span id="usernameStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.username.$error.minlength">* The username has to be a least 2 characters</span>
 						<span class="validationError" ng-show="signUpForm.username.$error.maxlength">* The username can't be more than 60 characters</span>
@@ -90,7 +90,7 @@
 			<div class="row">
 				<!-- Password -->						
 				<div class="col-md-5 col-md-offset-1">
-					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password.$valid, 'has-error': !signUpForm.password.$valid && signUpForm.password.$dirty}">
+					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password.$valid, 'has-error': signUpForm.password.$invalid && signUpForm.password.$dirty}">
 						<label class="control-label sr-only" for="Password"> Password </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
@@ -98,7 +98,7 @@
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password.$valid" aria-hidden="true"></span>
 						<span id="passwordStatus" class="sr-only">(success)</span>
-						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="!signUpForm.password.$valid && signUpForm.password.$dirty" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="signUpForm.password.$invalid && signUpForm.password.$dirty" aria-hidden="true"></span>
 						<span id="passwordStatus" class="sr-only">(warning)</span>
 						<span class="validationError" ng-show="signUpForm.password.$error.minlength">* The password has to be a least 8 characters</span>
 						<span class="validationError" ng-show="signUpForm.password.$error.maxlength">* The password can't be more than 100 characters</span>
@@ -111,7 +111,7 @@
 						<label class="control-label sr-only" for="password_confirmation"> Confirm </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
-							<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" ng-change="checkPassword(user)" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-match="{{user.password}}">
+							<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-match="{{user.password}}">
 						</div><!-- class input-group -->
 						<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="signUpForm.password_confirmation.$valid" aria-hidden="true"></span>
 						<span id="password_confirmationStatus" class="sr-only">(success)</span>
