--- a/app/partials/change-password.html
+++ b/app/partials/change-password.html
@@ -8,28 +8,55 @@
 	<div class="col-md-4 col-md-offset-4">
 		<form name="newPasswordForm" ng-submit="resetPassword(credentials)">
 			
-			<div class="input-group">
-				<span class="input-group-addon">
-					<span class="glyphicon glyphicon-envelope"></span>
-				</span>
-				<input type="email" name="email" class="form-control" id="email" ng-model="credentials.email" required>
-			</div><!-- class input-group -->
+			<div class="form-group has-feedback" ng-class="{'has-success': newPasswordForm.email.$valid, 'has-error': newPasswordForm.email.$invalid && newPasswordForm.email.$dirty}">
+				<div class="input-group">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-envelope"></span>
+					</span>
+					<input type="email" name="email" class="form-control" id="email" ng-model="credentials.email" aria-describedby="emailStatus" required>
+				</div><!-- class input-group -->
+				<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="newPasswordForm.email.$valid" aria-hidden="true"></span>
+				<span id="emailStatus" class="sr-only">(success)</span>
+				<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="newPasswordForm.email.$invalid && newPasswordForm.email.$dirty" aria-hidden="true"></span>
+				<span id="emailStatus" class="sr-only">(warning)</span>
+				<span class="validationError" ng-show="newPasswordForm.email.$error.required && newPasswordForm.email.$dirty">* The email is required</span>
+			</div>
+			
+			<div class="form-group has-feedback" ng-class="{'has-success': newPasswordForm.password.$valid, 'has-error': newPasswordForm.password.$invalid && newPasswordForm.password.$dirty}">
+				<div class="input-group">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-lock"></span>
+					</span>
+					<input type="password" class="form-control" ng-model="credentials.password" name="password" id="password" placeholder="Password..." ng-minlength="8" ng-maxlength="100" required>
+				</div><!-- class input-group -->
+				<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="newPasswordForm.password.$valid" aria-hidden="true"></span>
+				<span id="passwordStatus" class="sr-only">(success)</span>
+				<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="newPasswordForm.password.$invalid && newPasswordForm.password.$dirty" aria-hidden="true"></span>
+				<span id="passwordStatus" class="sr-only">(warning)</span>
+				<span class="validationError" ng-show="newPasswordForm.password.$error.minlength">* The password has to be a least 8 characters</span>
+				<span class="validationError" ng-show="newPasswordForm.password.$error.maxlength">* The password can't be more than 100 characters</span>
+			</div>
 
-			<div class="input-group">
-				<span class="input-group-addon">
-					<span class="glyphicon glyphicon-lock"></span>
-				</span>
-				<input type="password" name="password" class="form-control" id="password" ng-model="credentials.password" required>
-			</div><!-- class input-group -->
+			<div class="form-group has-feedback" ng-class="{'has-success': newPasswordForm.password_confirmation.$valid, 'has-error': newPasswordForm.password_confirmation.$invalid && newPasswordForm.password_confirmation.$dirty}">
+				<div class="input-group">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-check"></span>
+					</span>
+					<input type="password" class="form-control" ng-model="credentials.password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-match="{{credentials.password}}">
+				</div><!-- class input-group -->
+				<span class="glyphicon glyphicon-ok form-control-feedback" ng-show="newPasswordForm.password_confirmation.$valid" aria-hidden="true"></span>
+				<span id="password_confirmationStatus" class="sr-only">(success)</span>
+				<span class="glyphicon glyphicon-remove form-control-feedback" ng-show="newPasswordForm.password_confirmation.$invalid && newPasswordForm.password_confirmation.$dirty" aria-hidden="true"></span>
+				<span id="password_confirmationStatus" class="sr-only">(warning)</span>
+				<span class="validationError" ng-show="newPasswordForm.password_confirmation.$error.minlength">* The password has to be a least 8 characters</span>
+				<span class="validationError" ng-show="newPasswordForm.password_confirmation.$error.passwordmatch && newPasswordForm.password_confirmation.$dirty">* The two passwords have to match</span>
+				<span class="validationError" ng-show="newPasswordForm.password_confirmation.$error.maxlength">* The password can't be more than 100 characters</span>
+			</div>
 
-			<div class="input-group">
-				<span class="input-group-addon">
-					<span class="glyphicon glyphicon-check"></span>
-				</span>
-				<input type="password" name="pasword_confirmation" class="form-control" id="password_confirmation" ng-model="credentials.password_confirmation" required>
-			</div><!-- class input-group -->
+			<div class="col-md-4 col-md-offset-4">
+				<button class="btn btn-primary" type="submit"> Reset </button>
+			</div><!-- class col-md-6 -->
 
-			<button type="submit"> Reset </button>
 		</form>
 	</div>
 </div>
