--- a/app/partials/client-activation.html
+++ b/app/partials/client-activation.html
@@ -1,4 +1,4 @@
-<div ng-init="activate()">
+<div ng-init="activate()" class="container text-center">
 
 	<div class="page-header" ng-show="activated">
 		<h1> Activation success </h1>
