--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -6,7 +6,7 @@
 			<p class="lead"> Please create an account or log in to enjoy our news feeds. </p>
 		</div>
 
-		<form name="signUpForm" ng-submit="signUpForm.$valid && register(user)" novalidate>
+		<form name="signUpForm" ng-submit="signUpForm.$valid && register(user)" novalidate ng-hide="loading">
 			
 			<div class="row">	
 				
@@ -143,6 +143,10 @@
 			<p class="lead"> We sent you an email with a link to activate your account ! </p>
 		</div>
 
+	</div>
+
+	<div class="col-md-4 col-md-offset-4" ng-show="loading && !submitted">
+		<i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
 	</div>
 
 </div><!-- class container text-center -->
