--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -27,6 +27,7 @@
 								<div class="input-group">
 									<span class="input-group-addon"><span class="glyphicon glyphicon-th-list"></span></span>
 									<select class="form-control" ng-model="inputs.categories" name="categories" id="categories" required>
+										<option value="" disabled="disable"> Categories </option>
 										<option value="1"> Politics </option>
 										<option value="2"> Finance </option>
 										<option value="3"> Sports </option>
@@ -65,7 +66,7 @@
 				<!-- Submit -->
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4">
-						<button class="btn btn-primary btn-md" type="submit"> Post It ! </button>
+						<button class="btn btn-primary btn-md" type="submit"> Post ! </button>
 					</div><!-- class col-md-6 -->
 				</div><!-- class row -->
 
