--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -70,7 +70,7 @@
 							<p> {{article.content | preview}} </p>
 							<p>
 								<a ng-click="readMore(article.id)" class="btn btn-primary"> Read More </a>
-								<button ng-show="currentUser.role === 'admin'" class="btn btn-danger" ng-click="delete(article.id)"> Delete </button>
+								<button ng-show="currentUser.role === 'admin'" class="btn btn-danger" ng-click="deleteId = article.id"> Delete </button>
 							</p>
 						</div>
 					</div>
@@ -87,7 +87,7 @@
 					</div><!-- class pull-left media-middle -->
 
 					<div class="media-body">
-						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
+						<button ng-show="currentUser.role === 'admin'" data-target="#deletePostModal" ng-click="deleteId = article.id" data-toggle="modal" class="btn btn-danger pull-right"> Delete </button>
 						<h4 class="text-left lead media-heading"> {{article.title}} <small><em> — {{article.timestamp}} </em></small></h4>
 						<h5 class="text-left"><small><em> by {{article.username}} </em></small></h5>
 						<p class="lead contentMinView"> {{article.content | preview}} </p>
@@ -101,18 +101,42 @@
 			<div  class="newsContent" ng-show="showArticle">
 
 				<div class="container-fluid jumbotron">
-					<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-left" ng-click="delete(currentArticle.id)"> Delete </button>
+					<button ng-show="currentUser.role === 'admin'" data-target="#deletePostModal" data-toggle="modal" class="btn btn-danger pull-left" ng-click="deleteId = currentArticle.id"> Delete </button>
 					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<img class="center-block img-circle" ng-src="{{currentArticle.img_path}}" alt="" width="150" height="150">
 					<h2 class="lead"> {{currentArticle.title}} <small><em> — {{currentArticle.timestamp}} </em></small></h2>
 					<p class="contentFullView text-justify"> {{currentArticle.content}} </p>
 					<cite><em> by {{currentArticle.username}} </em></cite>
 					<button type="button" class="close pull-right" ng-click="closeArticle()" aria-label="Close"><span aria-hidden="true">&times;</span>
-				</div><!-- class container-fluid jumbotron -->
+					</div><!-- class container-fluid jumbotron -->
 
-			</div><!-- class newsContent -->
+				</div><!-- class newsContent -->
 
-		</div><!-- class col-md-9 text-center -->
+			</div><!-- class col-md-9 text-center -->
 
-	</div><!-- class row -->
+		</div><!-- class row -->
+
+		<!-- Delete account Modal (confirmation) -->
+		<div id="deletePostModal" class="modal fade" role="dialog" aria-labelledby="deletePostModal" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title"> WARNING: Delete Post </h4>
+					</div>
+
+					<div class="modal-body">
+						<p> Are you sure about that ? </p>
+					</div>
+
+					<div class="modal-footer">
+					{{deleteId}}
+						<button type="button" class="btn btn-default" data-dismiss="modal" ng-click="delete(deleteId)"> Yes </button>
+						<button type="button" class="btn btn-success" data-dismiss="modal"> No </button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
 </div><!-- class container -->
