--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -13,6 +13,7 @@
 				<!-- Firstname -->
 				<div class="col-md-5 col-md-offset-1">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.firstname.$valid, 'has-error': signUpForm.firstname.$invalid && signUpForm.firstname.$dirty}">
+					<label for="firstname"> Firstname </label>
 						<div class="input-group">
 							<span class="input-group-addon">
 								<span class="glyphicon glyphicon-hand-right"></span>
@@ -32,7 +33,7 @@
 				<!-- Lastname -->
 				<div class="col-md-5">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.lastname.$valid, 'has-error': signUpForm.lastname.$invalid && signUpForm.lastname.$dirty}">
-						<label class="control-label sr-only" for="Lastname"> Lastname </label>
+						<label for="lastname"> Lastname </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
 							<input type="text" class="form-control" ng-model="user.lastname" name="lastname" id="lastname" placeholder="Lastname..." ng-minlength="2" ng-maxlength="60" required>
@@ -54,7 +55,7 @@
 				<!-- Email -->
 				<div class="col-md-5 col-md-offset-1">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.email.$valid, 'has-error': signUpForm.email.$invalid && signUpForm.email.$dirty}">
-						<label class="control-label sr-only" for="Email"> Email </label>
+						<label for="email"> Email </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 							<input type="email" class="form-control" ng-model="user.email" name="email" id="email" placeholder="Email..." ng-maxlength="255" required email-check>
@@ -72,7 +73,7 @@
 				<!-- Username -->
 				<div class="col-md-5">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.username.$valid, 'has-error': signUpForm.username.$invalid && signUpForm.username.$dirty}">
-						<label class="control-label sr-only" for="username"> Username </label>
+						<label for="username"> Username </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 							<input type="text" class="form-control" ng-model="user.username" name="username" id="username" placeholder="username..." ng-minlength="2" ng-maxlength="60" required>
@@ -91,7 +92,7 @@
 				<!-- Password -->						
 				<div class="col-md-5 col-md-offset-1">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password.$valid, 'has-error': signUpForm.password.$invalid && signUpForm.password.$dirty}">
-						<label class="control-label sr-only" for="Password"> Password </label>
+						<label for="password"> Password </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
 							<input type="password" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Password..." ng-minlength="8" ng-maxlength="100" required>
@@ -108,7 +109,7 @@
 				<!-- Confirmation -->
 				<div class="col-md-5">
 					<div class="form-group has-feedback" ng-class="{'has-success': signUpForm.password_confirmation.$valid, 'has-error': signUpForm.password_confirmation.$invalid && signUpForm.password_confirmation.$dirty}">
-						<label class="control-label sr-only" for="password_confirmation"> Confirm </label>
+						<label for="password_confirmation"> Confirm </label>
 						<div class="input-group">
 							<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
 							<input type="password" class="form-control" ng-model="user.password_confirmation" name="password_confirmation" id="password_confirmation" placeholder="Confirm..." ng-minlength="8" ng-maxlength="100" required password-match="{{user.password}}">
